[metadata]
# replace with your username:
name = ipy-blink1
version = 0.0.1
author = Matthew Wigginton Conway
author_email = matt@indicatrix.org
description = Show IPython kernel status on a blink(1)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mattwigway/ipy-blink1
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: IPython

[options]
packages = find:
install_requires = blink1;
python_requires = >=3.6